--- a/settings/settings.html
+++ b/settings/settings.html
@@ -15,7 +15,7 @@
                 <th>Name</th>
                 <th>Enabled</th>
                 <th>URL</th>
-                <th>Query Param</th>
+                <th>Query</th>
             </tr>
         </table>
         
