--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,7 +10,7 @@
     <fieldset>
         <legend>SwitchSearch</legend>
     </fieldset>
-    <a id="settingsLink" href="../settings/settings.html" target="_blank">⚙️ Settings</a>
+    <a id="settings" href="../settings/settings.html" target="_blank">settings</a>
     <script type="module" src="popup.js"></script>
 </body>
 </html>
